defautl gap search bar, removed fixed height input

--- a/odbp.client/public/test-theme.css
+++ b/odbp.client/public/test-theme.css
@@ -16,5 +16,5 @@
 
 .test-theme {
   --utrecht-typography-sans-serif-font-family: "Titillium Web", Helvetica, Arial, sans-serif;
-  --gpp-woo-search-field-column-gap: var(--utrecht-space-inline-xs);
+  --gpp-woo-search-field-column-gap: 0;
 }
