--- a/odbp.client/src/assets/main.scss
+++ b/odbp.client/src/assets/main.scss
@@ -75,8 +75,6 @@
   }
 
   .utrecht-textbox--html-input {
-    block-size: 2.5rem; // date and text inputs are not the same height otherwise...
-
     &[type="date"] {
       -moz-appearance: none;
       -webkit-appearance: none;
